Update and rename test-build-module.yml to test_build_module.yml

--- a/.github/workflows/test_build_module.yml
+++ b/.github/workflows/test_build_module.yml
@@ -1,5 +1,5 @@
-name: Test Build Zapret Pocket
-run-name: ${{ startsWith(github.ref, 'refs/tags/') && format('Release {0}', github.ref_name) || null }}
+name: Build Zapret Pocket
+run-name: ${{ echo "1000" }}
 
 on:
   workflow_dispatch:
@@ -290,14 +290,24 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
+          
+      - name: Push updated files to Main branch
+        run: |
+          echo '{
+            "version": "${{ env.version }}",
+            "versionCode": "${{ env.versionCode }}",
+            "zipUrl": "https://github.com/${{ github.repository }}/releases/download/${{ env.version }}/zapret-pocket.zip",
+            "changelog": "https://raw.githubusercontent.com/${{ github.repository }}/main/CHANGELOG.md"
+          }' > update.json
+          git add update.json
+          git add module/system/app/VpnHotspot.apk
+          git add module/ipset/ipset-v4.txt
+          git add module/ipset/ipset-v6.txt
+          git add module/list/reestr.txt
+          git add module/dnscrypt/cloaking-rules.txt
+          git commit -m "Release ${{ env.version }}"
+          git push origin HEAD:main --force || echo "No changes to commit"
 
       - name: Calculate SHA-256 checksum
         id: sha256
         run: echo "SHA256=$(sha256sum zapret-pocket.zip | awk '{ print $1 }')" >> $GITHUB_ENV
-          
-      - name: Upload Module Zip
-        uses: actions/upload-artifact@v4
-        with:
-          name: zapret-pocket
-          path: zapret-pocket.zip
-          if-no-files-found: error
