--- a/module/dnscrypt/dnscrypt-proxy.toml
+++ b/module/dnscrypt/dnscrypt-proxy.toml
@@ -46,12 +46,19 @@ cache_neg_min_ttl = 30
 cache_neg_max_ttl = 180
 
 cloaking_rules = 'cloaking-rules.txt'
+forwarding_rules = 'forwarding-rules.txt'
 
 [blocked_names]
 blocked_names_file = 'blocked-names.txt'
 
 [blocked_ips]
 blocked_ips_file = 'blocked-ips.txt'
+
+[allowed_names]
+allowed_names_file = 'custom-allowed-names.txt'
+
+[allowed_ips]
+allowed_ips_file = 'custom-allowed-ips.txt'
 
 [broken_implementations]
 fragments_blocked = ['cisco', 'cisco-ipv6', 'cisco-familyshield', 'cisco-familyshield-ipv6', 'cisco-sandbox', 'cleanbrowsing-adult', 'cleanbrowsing-adult-ipv6', 'cleanbrowsing-family', 'cleanbrowsing-family-ipv6', 'cleanbrowsing-security', 'cleanbrowsing-security-ipv6']
